[57673] fix: md-tabs on mobile view, fix click events

--- a/src/main/webapp/admin/v9/src/scss/5-modules/_md-elfinder.scss
+++ b/src/main/webapp/admin/v9/src/scss/5-modules/_md-elfinder.scss
@@ -4,17 +4,6 @@
     margin-right: -15px !important;
 }
 
-.tabbable > .md-breadcrumb {
-    padding-left: 30px !important;
-    margin-right: 1px !important;
-}
-
-@media (max-width: 1199px) {
-    .tabbable > .md-breadcrumb {
-        padding-left: 57px !important;
-    }
-}
-
 .elfinder {
     border: 0px transparent !important;
     .elfinder-navbar {
